--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.27</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>java-dotenv</artifactId>
+            <version>5.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
